--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" :" http://dthrasher90.github.io/test9",
+  "homepage" :" https://dthrasher90.github.io/test9",
   "name": "app",
   "version": "0.1.0",
   "private": true,
